fix(header): unsets the vertically alignment to the search icon to overrule storybook css

--- a/tegel/src/components/header/header.scss
+++ b/tegel/src/components/header/header.scss
@@ -566,6 +566,10 @@ html,
     &:visited {
       background-color: var(--sdds-header-searchbar-all-result-item-bg-visited);
     }
+
+    .sdds-nav__app-searchbar-results-mgl-svg {
+      vertical-align: unset;
+    }
   }
 
   .sdds-nav__searchbar-results-item-core {
